[workspace]
resolver = "2"

members = [
    "./component/cyfs-base",
    "./component/cyfs-core",
    "./component/cyfs-base-derive",
    "./component/cyfs-chunk",
    "./component/cyfs-base-meta",
    "./component/cyfs-debug",
    "./component/cyfs-raptor-q",
    "./component/cyfs-bdt",
    "./component/cyfs-util",
    "./component/cyfs-noc",
    "./component/cyfs-noc",
    "./component/cyfs-tracker-cache",
    "./component/cyfs-cip",
    "./component/cyfs-lib",
    "./component/cyfs-stack",
    "./component/cyfs-stack-loader",
    "./component/cyfs-meta-lib",
    "./component/cyfs-perf/cyfs-perf-base",
    "./component/cyfs-perf/cyfs-perf-client",
    "./component/cyfs-task-manager",
    "./component/cyfs-chunk-cache",
    "./component/cyfs-chunk-lib",
	"./component/cyfs-mobile-stack",
    "./component/cyfs-dsg-client",

    "./service/base",
    "./service/ood-control",
    "./service/ood-daemon",
    "./service/app-manager",
    "./service/chunk-manager",
    "./service/gateway",
    "./service/file-manager",
    "./service/cyfs-runtime",
    "./service/app-manager-lib",
    "./service/dsg-service",

    "./tools/cyfs-client",
    "./tools/pack-tools",
    "./tools/desc-tool",
    "./tools/ood-installer",
    "./tools/cyfs-chunk-client",
    "./tools/cyfs-meta-client",
    "./tools/app-tool",
    "./tools/app-tool-ex",
    "./tools/cyfs-container",
    "./tools/zone-simulator",
    "./tools/zone-stack",
    "./tools/bdt-debuger",
    "./tools/bdt-debuger-deamon",
    "./tools/cyfs-check",
    "./tools/cyfs-stack-case",

    "./meta/browser-meta-spv",
    "./meta/cyfs-meta",
    "./meta/cyfs-meta-genesis",
    "./meta/cyfs-meta-miner",
    "./meta/cyfs-meta-spv",

    "./misc/sn-miner-rust",
    "./misc/pn-miner",

    "./tests/cyfs-stack-test",
    "./tests/cyfs-bench-mark",
    #"./tests/dsg-test",
]

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
