[package]
name = "ethabi"
version = "14.0.0"
authors = [
    "Parity Technologies <admin@parity.io>",
    "Artem Vorotnikov <artem@vorotnikov.me>",
    "Nicholas Rodrigues Lordello <nlordell@gmail.com>",
]
homepage = "https://github.com/rust-ethereum/ethabi"
license = "Apache-2.0"
keywords = ["ethereum", "eth", "abi", "solidity"]
description = "Easy to use conversion of ethereum contract calls to bytecode."
edition = "2018"

[dependencies]
anyhow = "1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
ethereum-types = "0.11.0"
thiserror = "1"
uint = "0.9.0"
rustc-hex = "2.1"
cyfs-base = { path = "../../component/cyfs-base" }
itertools = "0.10"
evm = { path = "../evm" }

[dev-dependencies]
hex-literal = "0.3"
paste = "1"
