[package]
name = "cyfs-backup-lib"
version = "0.1.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = 'BSD-2-Clause'
description = 'Rust cyfs-backup package'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = '0.9.0' }
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'

[dependencies]
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-core = { path = "../../component/cyfs-core" }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-lib = { path = "../../component/cyfs-lib" }
cyfs-util = { path = "../../component/cyfs-util" }
cyfs-bdt = { path = "../../component/cyfs-bdt" }
cyfs-noc = { path = "../../component/cyfs-noc" }
cyfs-chunk-cache = { path = "../../component/cyfs-chunk-cache" }
cyfs-chunk-lib = { path = "../../component/cyfs-chunk-lib" }
cyfs-bdt-ext = { path = "../../component/cyfs-bdt-ext" }
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
serde_json = "1.0"
serde = { version = '1.0', features = ['derive'] }
zip = '0.6'
async-trait = "0.1.53"
byteorder = "1.4"
prost = { version = '0.9.0' }
protobuf = { version = '2', features = ['with-bytes'] }
file-rotate = "0.7"
chrono = '0.4'
walkdir = "2.3"

[dev-dependencies]
rand = "0.8"