[package]
name = "cyfs-backup-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-util = { path = '../../component/cyfs-util', version = '0.6' }
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
cyfs-core = { path = '../../component/cyfs-core', version = '0.6' }
cyfs-debug = { path = '../../component/cyfs-debug', version = '0.6' }
log = '0.4'
async-h1 = { package = "cyfs-async-h1", version = '2.3.3' }
http-types = '2.12'
tide = '0.16'
serde_json = '1.0'
serde = { version = '1.0', features = ['derive'] }
async-trait = '0.1.53'
hex = '0.4'
async-std = { version = '1.11', features = ['unstable', 'attributes'] }