[package]
name = "cyfs-backup"
version = "0.1.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = 'BSD-2-Clause'
description = 'Rust cyfs-backup package'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-core = { path = "../../component/cyfs-core" }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-lib = { path = "../../component/cyfs-lib" }
cyfs-util = { path = "../../component/cyfs-util" }
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
serde_json = "1.0"
serde = { version = '1.0', features = ['derive'] }
zip = '0.6'
async-trait = "0.1.53"

[dev-dependencies]
rand = "0.8"