[package]
name = "cyfs-backup"
version = "0.1.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = 'BSD-2-Clause'
description = 'Rust cyfs-backup package'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = { version = '0.9.0' }
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'

[dependencies]
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-core = { path = "../../component/cyfs-core" }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-lib = { path = "../../component/cyfs-lib" }
cyfs-util = { path = "../../component/cyfs-util" }
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
serde_json = "1.0"
serde = { version = '1.0', features = ['derive'] }
zip = '0.6'
async-trait = "0.1.53"
byteorder = "1.4"
prost = { version = '0.9.0' }
protobuf = { version = '2', features = ['with-bytes'] }

[dev-dependencies]
rand = "0.8"