
[package]
name = 'cyfs-base-meta'
version = '0.6.2'
authors = ['liuzhicong <liuzhicong@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-base-meta package'

[dependencies]
cyfs-base = { path = '../cyfs-base', version = '0.6' }
cyfs-core = { path = '../cyfs-core', version = '0.6' }
log = '0.4'
sha2 = '0.8'
generic-array = { version = '0.12', default-features = false, features = [
	'serde',
] }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
hex = '0.4.2'
async-trait = '0.1.53'
async-std = '1.11'
futures = '0.3.25'
primitive-types = { version = '0.9' }
codec = { package = 'parity-scale-codec', version = '2.0', default-features = false, features = ['derive', 'full'], optional = true }
