[package]
name = "cyfs-bdt-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-util = { path = '../../component/cyfs-util', version = '0.6' }
cyfs-bdt = { path = '../../component/cyfs-bdt', version = '0.6' }
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
cyfs-core = { path = '../../component/cyfs-core', version = '0.6' }
cyfs-debug = { path = '../../component/cyfs-debug', version = '0.6' }
cyfs-lib = { path = '../../component/cyfs-lib', version = '0.7' }
cyfs-chunk-lib = { path = "../../component/cyfs-chunk-lib", version = "0.6" }
cyfs-ndc = { path = "../../component/cyfs-ndc" }
cyfs-tracker-cache = { path = "../../component/cyfs-tracker-cache" }
cyfs-chunk-cache = { path = "../../component/cyfs-chunk-cache" }
log = '0.4'
async-trait = "0.1.53"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
lru_time_cache = "0.11"
once_cell = '1.12'
serde = { version = '1.0', features = ['derive'] }
futures = "0.3"