[package]
name = "cyfs-chunk-cache"
version = "0.5.0"
edition = "2021"
license = "BSD-2-Clause"
description = "Rust cyfs-chunk-cache package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-util = { path = "../../component/cyfs-util" }
cyfs-chunk-lib = { path = "../cyfs-chunk-lib" }
async-std = { version = "1.11", features = ["unstable", "std"] }
memmap2 = "0.5.0"
log = "0.4"
async-trait = "0.1.53"
sysinfo = "0.23"
sha2 = "0.8.1"
rand = "0.8.4"
num-traits = "0.2.15"
scan_dir = "0.3.3"
futures-lite = "1.12.0"


[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
shared_memory = { version = "0.12.2", default-features = false, features = [
    "log",
] }
