
[package]
name = 'cyfs-cip'
version = '0.6.4'
authors = ['liyaxing <liyaxing@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-cip package'

[dependencies]
bip39 = '1.0'
rand = '0.7'
rand_core = '0.5'
rand_chacha = '0.2'
pbkdf2 = { version = '0.11', default-features = false }
log = '0.4'
sha2 = '0.10'
hmac = '0.12'
memzero = '0.1.0'
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
hex = '0.4'

[dependencies.digest]
version = '0.10.3'
features = ['mac']
