
[package]
name = 'cyfs-core'
version = '0.6.5'
authors = ['weiqiushi <weiqiushi@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-core package'

[build-dependencies]
prost-build = { version = '0.9.0' }
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'

[dependencies]
cyfs-base = { path = '../cyfs-base', version = '0.6' }
cyfs-util = { path = '../cyfs-util', version = '0.6' }
cyfs-bdt = { path = '../cyfs-bdt', version = '0.7' }
log = '0.4'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'
async-std = { version = '1.11', features = ['unstable', 'attributes'] }
async-trait = '0.1.53'
rand = '0.8'
int-enum = '0.4'
prost = { version = '0.9.0' }
once_cell = '1.12'
hex = '0.4'
chrono = '0.4'
protobuf = { version = '2', features = ['with-bytes'] }
semver = "1.0"