[package]
name = "cyfs-debug"
version = "0.5.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust cyfs-debug package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ['check']
check = []
trace = []
http_report = ["url", "surf", "formdata", "futures", "hyper"]

[dependencies]
log = { version = "=0.4.16", features = [
    "max_level_trace",
    "release_max_level_trace",
] }
cyfs-util = { path = "../cyfs-util", version = "0.5"}
flexi_logger = "=0.19.5"
cyfs-base = { path = "../../component/cyfs-base" , version = "0.5"}
async-h1 = { version = "2.3.3" }
async-std = { version = "1.11", features = ["attributes"] }
backtrace = "0.3"
log-panics = { version = "2.0", features = ["with-backtrace"] }
sha2 = "0.8"
hex = "0.4"
chrono = "0.4"
timer = "0.2"
once_cell = "1.12"
lazy_static = "=1.4"
tide = "0.16"
http-types = "2.12"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
async-trait = "0.1.53"
rand = "0.7"
url = { version = "2.2", optional = true }
surf = { version = "2.3", optional = true }
formdata = { version = "0.13", optional = true }
futures = { version = "0.3", optional = true }
hyper = { version = "0.10", optional = true }
num_cpus = "^1.13"
