
[package]
name = 'cyfs-group-lib'
version = '0.1.1'
authors = ['zhangzhen <zhangzhen@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-group package'

[build-dependencies]
prost-build = { version = '0.9.0' }
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'

[dependencies]
async-trait = "0.1.53"
async-std = '1.11'
log = '0.4'
serde_json = '1.0'
futures = '0.3.25'
serde = { version = '1.0', features = ['derive'] }
prost = { version = '0.11.5' }
protobuf = { version = '2', features = ['with-bytes'] }
lazy_static = '1.4'
sha2 = { version = '0.8' }
async-recursion = '1.0'
rand = '0.8.5'
itertools = "0.10.3"
http-types = '2.12'
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
cyfs-core = { path = '../../component/cyfs-core', version = '0.6' }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-lib = { path = '../../component/cyfs-lib' }
cyfs-util = { path = '../../component/cyfs-util' }