
[package]
name = 'cyfs-group'
version = '0.0.1'
authors = ['zhangzhen <zhangzhen@buckyos.com>']
edition = '2022'
license = 'BSD-2-Clause'
description = 'Rust cyfs-group package'

[build-dependencies]
protoc-rust = '2'
chrono = '0.4'
protoc-bin-vendored = '3'

[dependencies]
async-std = '1.11'
log = '0.4'
serde_json = '1.0'
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
cyfs-debug = { path = "../../component/cyfs-debug" }
