
[package]
name = 'cyfs-meta-lib'
version = '0.6.0'
authors = ['weiqiushi <weiqiushi@buckyos.com>']
edition = '2021'
license = 'BSD-2-Clause'
description = 'Rust cyfs-meta-lib package'

[dependencies]
async-std = '1.11'
http-types = '2.12'
async-h1 = '2.3.3'
hex = '0.4'
cyfs-base = { path = '../../component/cyfs-base', version = '0.6' }
cyfs-base-meta = { path = '../../component/cyfs-base-meta', version = '0.6' }
log = '0.4'
serde_json = '1.0'
rand = '0.7.3'
primitive-types = { version = '0.9' }
