[package]
name = "cyfs-noc"
version = "0.5.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust cyfs-noc package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
mongodb = { version = "1.2", default-features = false, features = [
    "async-std-runtime",
] }
bson = { version = "1.1" }
lru_time_cache = { version = "0.11" }
rusqlite = { version = "0.27.0", features = ["bundled", "blob"] }
log = "0.4"
async-trait = "0.1.53"
lazy_static = "1.4"
cyfs-util = { path = "../../component/cyfs-util" }
cyfs-lib = { path = "../../component/cyfs-lib" }
cyfs-base = { path = "../../component/cyfs-base" }
cyfs-debug = { path = "../../component/cyfs-debug" }
cyfs-core = { path = "../../component/cyfs-core" }
async-std = { version = "1.11", features = ["unstable", "attributes"] }
thread_local = "1.1"
hex = "0.4"
once_cell = "1.12"

[dev-dependencies]
