[package]
name = "cyfs-pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-base = { path = '../cyfs-base', version = '0.6' }
cyfs-util = { path = "../cyfs-util", version = '0.6' }
cyfs-debug = { path = "../cyfs-debug", version = '0.6' }
async-std = { version = '1.11', features = ['unstable', 'attributes'] }
thread-priority = '0.10.0'
async-trait = '0.1.53'
log = '0.4'
serde_json = '1.0'
serde = { version = '1.0', features = ['derive'] }
clap = "2.34.0"
num_cpus = '^1.13'