[package]
name = "cyfs-stack-loader"
version = "0.5.0"
authors = ["liyaxing <liyaxing@buckyos.com>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Rust cyfs-stack-loader package"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyfs-util = { path = "../cyfs-util" }
cyfs-bdt = { path = "../cyfs-bdt" }
cyfs-bdt-ext = { path = "../cyfs-bdt-ext" }
cyfs-stack = { path = "../cyfs-stack" }
cyfs-lib = { path = "../cyfs-lib" }
cyfs-base = { path = "../cyfs-base" }
cyfs-debug = { path = "../cyfs-debug" }
cyfs-noc = { path = "../cyfs-noc" }
cyfs-meta-lib = { path = "../cyfs-meta-lib" }
serde = "1.0"
log = "0.4"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
async-trait = "0.1.53"
lazy_static = "1.4"
regex = "1.5"
toml = { version = "0.5", features = ["preserve_order"] }
toml_edit = "0.15"
